# mcp-youtube-transcript

./: .env.example  .gitignore  CHANGELOG.md  README.md  enhanced_server.py  main.py  pyproject.toml  setup.sh  streamlined_server.py
archive/: server.py
archive/debug-files/: debug_real_vtt.txt  final_duplicate_validation.py  test_deduplication.py  test_duplicate_vtt.py  test_specific_duplicates.py  test_truncation_fix.py  test_ytdlp_duplicate_fix.py
archive/development-docs/: CLEANUP_PLAN.md  DEDUPLICATION_SOLUTION.md  ENHANCEMENT_COMPLETION_SUMMARY.md  FUTURE_DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  INVESTIGATION_COMPLETE.md  TRANSFORMATION_SUMMARY.md  TRUNCATION_FIX_COMPLETE.md  V030_ALIGNMENT_ANALYSIS.md  V030_IMPLEMENTATION_COMPLETE.md  v0.3.0-DOCUMENTATION-UPDATE-SUMMARY.md
archive/documentation/: STREAMLINED_INTELLIGENCE_SUITE_PLAN.md  VTT_DUPLICATION_ANALYSIS.md  VTT_TO_SRV1_MIGRATION_GUIDE.md
archive/migration-validation/: test_migration_parsers.py  test_subtitle_formats.py  validate_migration.py
archive/scripts-debug/: batch_extract.sh  debug_api.py  (+11 more)
docs/: README.md  TESTING_STRATEGY_V0.5.0.md  api-reference.md  configuration.md  development.md  examples.md  installation.md  project-overview.md  technical-overview.md  testing.md  troubleshooting.md
examples/: legacy_main.py  simple_usage.py
scripts/: README.md  validate_setup.py  youtube_to_mcp.py
tests/: README.md  __init__.py  run_test_suite.py  test_mcp_integration.py  test_prompts_system.py  test_resources_system.py  test_tools_functionality.py  test_v030_comprehensive.py  validate_v030.py
(+42 files in other folders)
